ingress/deployment-default.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-default
  namespace: default
  labels:
    app: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
      - name: default-backend
        image: stefanprodan/podinfo
        ports:
        - containerPort: 9898
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: svc-default
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9898
  selector:
    app: default
